Create a Player class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ include(FetchContent)
 FetchContent_Declare(raylib GIT_REPOSITORY https://github.com/raysan5/raylib.git GIT_TAG master)
 FetchContent_MakeAvailable(raylib)
 
-add_executable(${PROJECT_NAME} src/main.cpp src/classes/Game.cpp src/classes/Block.cpp src/classes/World.cpp src/classes/TexturesManager.cpp src/classes/TexturesManager.h src/classes/Inventory.cpp src/classes/Inventory.h)
+add_executable(${PROJECT_NAME} src/main.cpp src/classes/Game.cpp src/classes/Block.cpp src/classes/World.cpp src/classes/TexturesManager.cpp src/classes/TexturesManager.h src/classes/Inventory.cpp src/classes/Inventory.h src/classes/Player.cpp src/classes/Player.h)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE raylib)
 target_compile_definitions(${PROJECT_NAME} PUBLIC ASSETS_PATH="${CMAKE_CURRENT_SOURCE_DIR}/assets/")
